# KaQToos

./: CMakeLists.txt  README  downloadmanager.cpp  downloadmanager.h  kaqtoos.cpp  kaqtoos.h  main.cpp  productitem.cpp  productitem.h
